--- a/notes.org
+++ b/notes.org
@@ -107,7 +107,7 @@ ReleaseSemaphore()
 
 
 
-
+     
 
 * Unix
 
@@ -116,6 +116,7 @@ ReleaseSemaphore()
 *** 互斥锁（mutex）
 pthread_mutex_t
 pthread_mutex_init()
+pthread_mutex_destory()
 
 pthread_mutex_lock()
 pthread_mutex_unlock()
@@ -128,3 +129,11 @@ POSIX线程锁机制的Linux实现都不是取消点，因此，延迟取消类型的线程不会因收到取消信
 处理过程中使用互斥锁，否则容易造成死锁。
 
 *** 条件变量
+
+pthread_cond_t
+pthread_cond_init()
+pthread_cond_destroy()
+
+pthread_cond_wait()
+pthread_cond_timewait()
+    
